<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse</groupId>
	<artifactId>org.eclipse.tm4e</artifactId>
	<version>0.3.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<prerequisites>
		<maven>3.6.3</maven>
	</prerequisites>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho-version>3.0.0</tycho-version>
		<sonar.jacoco.reportPath>../target/jacoco.exec</sonar.jacoco.reportPath>
		<tycho.scmUrl>scm:git:https://github.com/eclipse/tm4e.git</tycho.scmUrl>
		<jgit.dirtyWorkingTree>error</jgit.dirtyWorkingTree>
	</properties>
	<organization>
		<name>Eclipse TM4E project</name>
		<url>https://projects.eclipse.org/projects/technology.tm4e</url>
	</organization>
	<inceptionYear>2016</inceptionYear>

	<licenses>
		<license>
			<name>Eclipse Public License</name>
			<url>https://www.eclipse.org/legal/epl-v20.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<modules>
		<module>target-platform</module>
		<module>org.eclipse.tm4e.core</module>
		<module>org.eclipse.tm4e.core.tests</module>
		<module>org.eclipse.tm4e.registry</module>
		<module>org.eclipse.tm4e.ui</module>
		<module>org.eclipse.tm4e.ui.tests</module>
		<module>org.eclipse.tm4e.languageconfiguration</module>
		<module>org.eclipse.tm4e.languageconfiguration.tests</module>
		<module>org.eclipse.tm4e.language_pack</module>
		<module>org.eclipse.tm4e.markdown</module>
		<module>org.eclipse.tm4e.samples</module>
		<module>org.eclipse.tm4e.feature</module>
		<module>org.eclipse.tm4e.language_pack.feature</module>
		<module>org.eclipse.tm4e.repository</module>
	</modules>
	<build>
		<defaultGoal>clean install</defaultGoal>
		<!-- plain surefire tests without tycho -->
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<inherited>true</inherited>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<target>
						<artifact>
							<groupId>org.eclipse.tm4e</groupId>
							<artifactId>tm4e-target</artifactId>
							<version>0.3.2-SNAPSHOT</version>
						</artifact>
					</target>
				</configuration>
			</plugin>
			<!-- see: http://mukis.de/pages/simple-junit-tests-with-tycho-and-surefire/ -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit-platform</artifactId>
						<version>3.0.0-M7</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>5.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
				<executions>
					<execution>
						<id>compiletests</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>feature-source</id>
						<phase>package</phase>
						<goals>
							<goal>feature-source</goal>
						</goals>
					</execution>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-p2-metadata</id>
						<phase>verify</phase>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<baselineRepositories>
						<repository>
							<url>http://download.eclipse.org/tm4e/snapshots</url>
						</repository>
					</baselineRepositories>
					<defaultP2Metadata>false</defaultP2Metadata>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<dependencies>
					<dependency>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-buildtimestamp-jgit</artifactId>
						<version>${tycho-version}</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-sourceref-jgit</artifactId>
						<version>${tycho-version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<sourceReferences>
						<generate>true</generate>
					</sourceReferences>
					<timestampProvider>jgit</timestampProvider>
					<jgit.ignore>pom.xml</jgit.ignore>
					<jgit.dirtyWorkingTree>${jgit.dirtyWorkingTree}</jgit.dirtyWorkingTree>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.9.0</version>
				<configuration>
					<basedir>${basedir}</basedir>
					<header>license.txt</header>
					<includes>
						<include>src/**/*.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<releaseProfiles>lax</releaseProfiles>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
				</executions>
				<configuration>
					<append>true</append>
					<destFile>${sonar.jacoco.reportPath}</destFile>
					<includes>
						<include>org.eclipse.tm4e.*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho.extras</groupId>
				<artifactId>tycho-p2-extras-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>compare-version-with-baseline</id>
						<goals>
							<goal>compare-version-with-baselines</goal>
						</goals>
						<configuration>
							<baselines>
								<url>http://download.eclipse.org/tm4e/releases/latest</url>
							</baselines>
							<comparator>zip</comparator>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<scm>
		<url>https://github.com/eclipse/tm4e</url>
		<connection>scm:git:https://github.com/eclipse/tm4e</connection>
		<developerConnection>scm:git:https://github.com/eclipse/tm4e</developerConnection>
	</scm>
	<profiles>
		<profile>
			<id>lax</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-packaging-plugin</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<strictVersions>false</strictVersions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.cbi.maven.plugins</groupId>
						<artifactId>eclipse-jarsigner-plugin</artifactId>
						<version>1.3.4</version>
						<executions>
							<execution>
								<id>jarsigner</id>
								<phase>package</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<!-- org.eclipse.cbi.maven.plugins:eclipse-jarsigner-plugin not present in central maven repo -->
			<id>cbi</id>
			<url>https://repo.eclipse.org/content/groups/cbi</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>dash-licenses-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/dash-licenses-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
